fixes further header dropdown horizontal scrolling issues

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -127,7 +127,7 @@
   display: flex;
   flex-flow: column wrap;
   position: absolute;
-  min-width: 25vw;
+  min-width: 18vw;
 }
 
 .issueContentOpen > button {
