--- a/styles/Books.module.css
+++ b/styles/Books.module.css
@@ -130,7 +130,7 @@
   display: flex;
   flex-flow: column wrap;
   position: absolute;
-  min-width: 25vw;
+  min-width: 18vw;
 }
 
 .issueContentOpen > button {
