--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -134,7 +134,7 @@
   display: flex;
   flex-flow: column wrap;
   position: absolute;
-  min-width: 25vw;
+  min-width: 18vw;
 }
 
 .issueContentOpen > button {
